refactor(basic-2.1): put closing tag button on a new line

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         <input type="text" value="Go Shopping" class="task">
         <button class='edit'>Save</button>
         <button class="delete">
-          <img src="./remove.svg"></button>
+          <img src="./remove.svg">
+        </button>
       </li>
     </ul>
     <h3>Completed</h3>
