--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 
-<HEAD>
+<head>
   <title>Todo App</title>
   <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="style.css" MEDIA="screen" charset="utf-8">
-</HEAD>
+  <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
+</head>
 
 <body>
   <div class="aaa">
@@ -57,7 +57,7 @@
       </li>
     </ul>
   </div>
-  <script SRC="app.js"></script>
+  <script src="app.js"></script>
 </body>
 
 </html>
