--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <div class="aaa">
-    <img src="./eisenhower-matrix.jpg">
+    <img src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
     <a class="more_inf" 
       href="https://goal-life.com/page/method/matrix-eisenhower">
       Want more details?
@@ -31,7 +31,7 @@
         <input type="text" class="task">
         <button class="edit">Edit</button>
         <button class="delete">
-          <img src="./remove.svg">
+          <img src="./remove.svg" alt="Remove task">
         </button>
       </li>
       <li class="editMode">
@@ -40,7 +40,7 @@
         <input type="text" value="Go Shopping" class="task">
         <button class="edit">Save</button>
         <button class="delete">
-          <img src="./remove.svg">
+          <img src="./remove.svg" alt="Remove task">
         </button>
       </li>
     </ul>
@@ -52,7 +52,7 @@
         <input type="text" class="task">
         <button class="edit">Edit</button>
         <button class="delete">
-          <img src="./remove.svg">
+          <img src="./remove.svg" alt="Remove button">
         </button>
       </li>
     </ul>
