--- a/index.html
+++ b/index.html
@@ -7,61 +7,61 @@
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
 
-<body>
-  <header></header>
-  <main>
-    <article class="aaa">
-      <h1 class="h1-heading">Todo App</h1>
-      <img src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
-      <a class="more_inf" 
+<body class="body">
+  <header class="header"></header>
+  <main class="main">
+    <article class="article">
+      <h1 class="article__title article__title--h1">Todo App</h1>
+      <img class="article__img" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
+      <a class="article__link" 
         href="https://goal-life.com/page/method/matrix-eisenhower">
         Want more details?
       </a>
     </article>
-    <article class="centered-main-page-element">
-      <div id="topSectionForAddingElementToList">
-        <h3 class="new-task">Add Item</h3>
-        <div class="task-row-wrapper">
-          <input id="new-task" class="task" type="text">
-          <button>Add</button>
-        </div>
-      </div>
-      <h3>Todo</h3>
-      <ul id="incompleteTasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="Remove task">
+    <article class="article article--centered">
+      <h3 class="article__title article__title--new-task">Add Item</h3>
+      <ul class="list">
+        <li class="list__item article__wrapper">
+          <input id="new-task" class="list__item-new-task" type="text">
+          <button class="btn">Add</button>
+        </li>
+      </ul>
+      <h3 class="article__title">Todo</h3>
+      <ul class="list" id="incomplete-tasks">
+        <li class="list__item">
+          <input class="list__item-checkbox" type="checkbox">
+          <label class="list__item-label">Pay Bills</label>
+          <input class="list__item-text" type="text">
+          <button class="btn list__item-edit-btn">Edit</button>
+          <button class="btn list__item-delete-btn">
+            <img class="list__item-img" src="./remove.svg" alt="Remove task">
           </button>
         </li>
-        <li class="editMode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="Remove task">
+        <li class="list__item list__item--edit-mode">
+          <input class="list__item-checkbox" type="checkbox">
+          <label class="list__item-label">Go Shopping</label>
+          <input class="list__item-text" type="text" value="Go Shopping">
+          <button class="btn list__item-edit-btn">Save</button>
+          <button class="btn list__item-delete-btn">
+            <img class="list__item-img" src="./remove.svg" alt="Remove task">
           </button>
         </li>
       </ul>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="Remove button">
+      <h3 class="article__title">Completed</h3>
+      <ul class="list list--completed" id="completed-tasks">
+        <li class="list__item">
+          <input class="list__item-checkbox" type="checkbox" checked>
+          <label class="list__item-label">See the Doctor</label>
+          <input class="list__item-text" type="text">
+          <button class="btn list__item-edit-btn">Edit</button>
+          <button class="btn list__item-delete-btn">
+            <img class="list__item-img" src="./remove.svg" alt="Remove button">
           </button>
         </li>
       </ul>
     </article>
   </main>
-  <footer></footer>
+  <footer class="footer"></footer>
   <script src="app.js"></script>
 </body>
 
