refactor(no-rule): delete unused styles and classes

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       </a>
     </article>
     <article class="article article--centered">
-      <h3 class="article__title article__title--new-task">Add Item</h3>
+      <h3 class="article__title">Add Item</h3>
       <ul class="list">
-        <li class="list__item article__wrapper">
+        <li class="list__item">
           <input id="new-task" class="list__item-new-task" type="text">
           <button class="btn">Add</button>
         </li>
