fix(extended-1.1): restore deleted in previous commit(extended-1.1) tag <label>; focus fixed

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </a>
     </article>
     <article class="article article--centered">
-      <h3 class="article__title">Add Item</h3>
+      <h3 class="article__title"><label for="new-task">Add Item</label></h3>
       <ul class="list">
         <li class="list__item">
           <input id="new-task" class="list__item-new-task" type="text">
